Fix footer layout on mobile phones

--- a/css/output.css
+++ b/css/output.css
@@ -171,7 +171,7 @@ footer {
 .footer-container {
     max-width: 1200px;
     margin: 0 auto;
-    border: 3px solid goldenrod;
+    /*border: 3px solid goldenrod;*/
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -275,7 +275,7 @@ footer {
    }
 
    .footer-container{
-    flex-wrap: wrap;
+    flex-direction: column;
    }
 
    .footer-socials {
